@@ -1,23 +1,24 @@
 Package: pogit
 Type: Package
 Title: Bayesian Variable Selection for a Poisson-Logistic Model
-Version: 1.1.0
-Date: 2016-04-06
+Version: 1.2.0
+Date: 2019-01-17
 Authors@R: c(person("Michaela", "Dvorzak", role = c("aut","cre"), 
   email = "m.dvorzak@gmx.at"),
   person("Helga", "Wagner", role = "aut"))
-Author: Michaela Dvorzak [aut, cre], Helga Wagner [aut]
+Author: Michaela Dvorzak [aut, cre],
+  Helga Wagner [aut]
 Maintainer: Michaela Dvorzak <m.dvorzak@gmx.at>
 Description: Bayesian variable selection for regression models of under-reported
     count data as well as for (overdispersed) Poisson, negative binomal and
     binomial logit regression models using spike and slab priors.
 License: GPL-2
 Depends: R(>= 2.10.0)
-Imports: BayesLogit, ggplot2, logistf, plyr, stats, utils, grDevices
+Imports: ggplot2, logistf, plyr, stats, utils, grDevices
 LazyData: true
 Suggests: COUNT
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.1
 NeedsCompilation: no
-Packaged: 2016-04-06 16:34:40 UTC; michi
+Packaged: 2019-01-17 18:28:07 UTC; michi
 Repository: CRAN
-Date/Publication: 2016-04-07 00:49:18
+Date/Publication: 2019-01-17 22:20:04 UTC
