@@ -1,16 +1,17 @@
-1b87cf3f020eb9c165b1075ecb88717c *DESCRIPTION
-576761f5829cda595fd9e37357922706 *NAMESPACE
+814e6cd19bb2bd504764af35605fcb59 *DESCRIPTION
+0b21ac50c8a63c6c40104598578a8b88 *NAMESPACE
 be83410276d98034c98dccfc2c89b858 *R/cervical.R
 a6d3b97555046840b300eb69d67374a1 *R/cervical_validation.R
 762a95674db555babf1be621f87e6f3d *R/compmix.R
+28c437cb8ebdf3cc3f5fa48e2143dce1 *R/compute_mixture.R
 1f396d2e7c1acfb28969aa84f1e80ac8 *R/dataug_logit_drum.R
-6169ffb1f9c901fe99db7409a86c7ce3 *R/dataug_pois_iams.R
-c955fb4a40dcbbae26a7cd698ac63a96 *R/logitBvs.R
+1c3b7df92b73f3efd07c5c652e5c18ba *R/dataug_pois_iams.R
+ffee2ed2d46ea360f463d57e6187d160 *R/logitBvs.R
 53dd15e1b35864bc66838bbaa6cad6e6 *R/mixcomp_poisson.R
-567da9070adca875945cc93be57a0eef *R/negbinBvs.R
+bcf3305d8696bb0ee30e3fafdef1151b *R/negbinBvs.R
 7d35738b82122effd2498014e2974e24 *R/plot.R
-b8c97262963e1e9259b1b04080b2719a *R/pogitBvs.R
-3f58797a1091822980f451e08ac56de0 *R/poissonBvs.R
+82ab154fd1fc2a595b120780d9d0c998 *R/pogitBvs.R
+671a38c389c8d0ecab4cdfb83e5146d9 *R/poissonBvs.R
 dd7f74632707b64a24e143a4f324b014 *R/print.R
 06d5498d707097c571282c66d9b8f6b4 *R/select_logit.R
 502eeab54a2ffefa7808b4fbd93e91a1 *R/select_negbin.R
@@ -32,19 +33,19 @@ fd55c8261295d1f03ad49eb499a926a8 *data/simul_binomial.rda
 c5faea86a5de0d374a0ace2d21dfb431 *data/simul_pois1.rda
 2e3f6c0694de651708d6a8d51dc1ba00 *data/simul_pois2.rda
 4fc634258f289b2a12c838d8b996e734 *inst/CITATION
-b2b444eab051ece76cd097377897087b *inst/NEWS.Rd
-281b1346cf6f745134baa11c29bbcd4d *man/cervical.Rd
-51c0dae069fc2c78ec81b55cee6fba6d *man/cervical_validation.Rd
-3346e286a3e65bf367080e38ec9cdd7f *man/logitBvs.Rd
-4247072d905eef2f80b1ef07e20e699a *man/negbinBvs.Rd
-bfeec0b04d2182dd586d10c5a815db21 *man/plot.pogit.Rd
+21f8cb8a8426de06ad163539fcb6ad94 *inst/NEWS.Rd
+7a287ca80ba9f7be46ee4873bc7e828c *man/cervical.Rd
+bfc7596cc8c85fa82961100f806c4547 *man/cervical_validation.Rd
+fb839f74ccc0c73cee5dd7603b6bebaa *man/logitBvs.Rd
+6b949193162964f57d0ddc6c1f17cee1 *man/negbinBvs.Rd
+0275ff7942e2512fdec3bdcc8678f5cb *man/plot.pogit.Rd
 93bd5af4ae33c1b951ae5ff2762aa366 *man/pogit-package.Rd
-c4a363d1a2116307183cbe0231f4b2f2 *man/pogitBvs.Rd
-f38d80ba3dbbf58ac1645716066edb1c *man/poissonBvs.Rd
-ab38a19c2a842d84df784106ff40b16b *man/print.pogit.Rd
-57247db3ebe8d1aaa8c4b6a398521eda *man/simul1.Rd
-5d4345c5b9d7ad965f30dd2e02f57393 *man/simul2.Rd
-26a3e8a6272b0fd2f2b893303eaff609 *man/simul_binomial.Rd
-856b9c5053ab768f7d1ac4ddf4fc1d63 *man/simul_pois1.Rd
-880c81d36685d828e20b3a617601636a *man/simul_pois2.Rd
-bcfae0f3bdb3914aaac731c0f85076fe *man/summary.pogit.Rd
+02dbc3abe123d8470a757fc63644cf4c *man/pogitBvs.Rd
+fce8091c9ae867433bfc52eec5d90397 *man/poissonBvs.Rd
+5a707564ff43ecdf9a003159f221d4f5 *man/print.pogit.Rd
+19e1d498405ba82895c9b6c4c1df6f1b *man/simul1.Rd
+076f5017996bc00c5274a6575ff5cc1e *man/simul2.Rd
+a0ade4259954de873b9c9af1732a2327 *man/simul_binomial.Rd
+be9ae2ba0f92664c35bc25e2059027bb *man/simul_pois1.Rd
+cc48b58d8c66b8e04ee44446103ec994 *man/simul_pois2.Rd
+b906d142f030b79027e52fdac8ad1954 *man/summary.pogit.Rd
