@@ -12,5 +12,4 @@ import(ggplot2)
 import(grDevices)
 import(stats)
 import(utils)
-importFrom(BayesLogit,compute.mixture)
 importFrom(plyr,rbind.fill)
