@@ -4,8 +4,8 @@
 \alias{plot.pogit}
 \title{Plot an object of class \code{pogit}}
 \usage{
-\method{plot}{pogit}(x, type = "traceplot", burnin = TRUE, thin = TRUE,
-  lag.max = NULL, ci = TRUE, maxPlots = NULL, ...)
+\method{plot}{pogit}(x, type = "traceplot", burnin = TRUE,
+  thin = TRUE, lag.max = NULL, ci = TRUE, maxPlots = NULL, ...)
 }
 \arguments{
 \item{x}{an object of class \code{pogit}}
@@ -46,4 +46,3 @@ posterior means and 95\%-HPD intervals for the regression effects.
 \author{
 Michaela Dvorzak <m.dvorzak@gmx.at>
 }
-
