@@ -1,8 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/summary.R
 \name{summary.pogit}
-\alias{print.summary.pogit}
 \alias{summary.pogit}
+\alias{print.summary.pogit}
 \title{Summary for posterior of a \code{pogit} object}
 \usage{
 \method{summary}{pogit}(object, IAT = FALSE, printRes = FALSE, ...)
@@ -42,11 +42,10 @@ IAT is computed as \eqn{\tau = 1 + 2 \sum_{k=1}^K \rho(k)}
 using the initial monotone sequence estimator (Geyer, 1992) for K and 
 \eqn{\rho(k)} is the empirical autocorrelation at lag \eqn{k}.
 }
-\author{
-Michaela Dvorzak <m.dvorzak@gmx.at>
-}
 \references{
 Geyer, C. J. (1992). Practical Markov Chain Monte Carlo. 
  \emph{Statistical Science}, \strong{7}, 473-483.
 }
-
+\author{
+Michaela Dvorzak <m.dvorzak@gmx.at>
+}
